[package]
name = "echat"
version = "0.1.0"
authors = ["suprohub <suprohub@gmail.com>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = { version = "0.31", features = [
    "rayon",         # For enabling fast text tesselation
] }
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "glow".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
egui_extras = { version = "0.31", features = ["datepicker", "serde", "all_loaders"] }
image = "0.25"
log = "0.4"

serde_json = "1.0"
anyhow = "1.0"
rand = "0.9"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
matrix-sdk = "0.10"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
dirs = "6.0"
simple_logger = "5.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
matrix-sdk = { version = "0.10", default-features = false, features = ["automatic-room-key-forwarding", "native-tls", "e2e-encryption", "qrcode", "indexeddb"] }
tokio = { version = "1.44", features = ["macros", "rt"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm
codegen-units = 1
lto = true
strip = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }
